--- a/AppBar/AndroidManifest.xml
+++ b/AppBar/AndroidManifest.xml
@@ -4,6 +4,8 @@
       android:versionCode="1"
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="4" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"></uses-permission>
+    <uses-permission android:name="android.permission.STATUS_BAR"></uses-permission>
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".AppBarConfigActivity"
@@ -13,6 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name="AppBarStarter" android:enabled="true"></receiver>
+        <service android:enabled="true" android:name="AppBarService"></service>
 
     </application>
 </manifest>
