--- a/AppBar/AndroidManifest.xml
+++ b/AppBar/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-sdk android:minSdkVersion="4" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"></uses-permission>
     <uses-permission android:name="android.permission.STATUS_BAR"></uses-permission>
+    <uses-permission android:name="android.permission.GET_TASKS"></uses-permission>
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".AppBarConfigActivity"
