--- a/AppBar/AndroidManifest.xml
+++ b/AppBar/AndroidManifest.xml
@@ -2,25 +2,43 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="de.ubuntudroid.appbar"
       android:versionCode="1"
-      android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="4" />
+      android:versionName="1.0"
+      android:installLocation="internalOnly">
+    <uses-sdk android:minSdkVersion="8" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"></uses-permission>
-    <uses-permission android:name="android.permission.STATUS_BAR"></uses-permission>
     <uses-permission android:name="android.permission.GET_TASKS"></uses-permission>
-
+    <uses-permission android:name="android.permission.EXPAND_STATUS_BAR"></uses-permission>
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <receiver android:name="AppBarStarter" android:enabled="true">
+
+        <receiver android:name="de.ubuntudroid.appbar.AppBarStarter" android:enabled="true" android:label="AppBarStarter">
         	<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED"/>
 				<action android:name="android.intent.action.USER_PRESENT"/>
 				<category android:name="android.intent.category.HOME" />
             </intent-filter>
+            <intent-filter >
+                <action android:name="de.ubuntudroid.appbar.START_ACTIVITY_INTENT"/>
+            </intent-filter>
         </receiver>
+        
         <service android:enabled="true" android:name="AppBarService">
         	<intent-filter>
         		<action android:name="de.ubuntudroid.appbar.AppBarService"/>
         	</intent-filter>
         </service>
+        
+        <service android:enabled="true" android:name="StatusBarCloserService">
+        	<intent-filter>
+        		<action android:name="de.ubuntudroid.appbar.StatusBarCloserService"/>
+        	</intent-filter>
+        </service>
+        
+        <activity android:name="de.ubuntudroid.appbar.AppBarInfo" android:label="@string/app_name">
+            <intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+        </activity>
 
     </application>
 </manifest>
