fixed #11: phone calls (esp. screen off during phone calls) removed the service and it wasn't started again - changed broadcast receivers to receive solely SCREEN_OFF, SCREEN_ON and BOOT_COMPLETED, service is not stopped on SCREEN_OFF, but working thread is just stopped

--- a/AppBar/AndroidManifest.xml
+++ b/AppBar/AndroidManifest.xml
@@ -13,7 +13,7 @@
         <receiver android:name="de.ubuntudroid.appbar.AppBarStarter" android:enabled="true" android:label="AppBarStarter">
         	<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED"/>
-				<action android:name="android.intent.action.USER_PRESENT"/>
+				<!-- <action android:name="android.intent.action.USER_PRESENT"/> -->
 				<category android:name="android.intent.category.HOME" />
             </intent-filter>
             <intent-filter >
