--- a/AppBar/AndroidManifest.xml
+++ b/AppBar/AndroidManifest.xml
@@ -4,11 +4,12 @@
       android:versionCode="1"
       android:versionName="1.0"
       android:installLocation="internalOnly">
-    <uses-sdk android:minSdkVersion="8" />
+    <uses-sdk android:minSdkVersion="15" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"></uses-permission>
     <uses-permission android:name="android.permission.GET_TASKS"></uses-permission>
     <uses-permission android:name="android.permission.EXPAND_STATUS_BAR"></uses-permission>
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:label="@string/app_name"
+        android:theme="@style/MyTheme">
 
         <receiver android:name="de.ubuntudroid.appbar.AppBarStarter" android:enabled="true" android:label="AppBarStarter">
         	<intent-filter>
